Fix quote alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,15 +20,17 @@ body {
 }
 
 .triangle-isosceles {
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: row wrap;
-      -ms-flex-direction: row wrap;
-          flex-direction: row wrap;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
+  align-items: center;
   position:relative;
   padding: 2em 0;
   color:#000;
